Was able to get Handlebars to emit some text -- not right yet, but a start.

--- a/assets/scripts/templates/chore-list.handlebars
+++ b/assets/scripts/templates/chore-list.handlebars
@@ -1,12 +1,11 @@
 
-{{#each chore as |chore|}}
+{{#each chores as |chore|}}
 
-<!--we are using data id and not id -->
-<ol id='tog' data-id="{{chore.id}}">
+<ol id='chore-listing' data-id="{{chore.id}}">
+  <p>This is a chore listing<p>
   <li>Chore ID:{{chore.id}}</li>
   <li>Directions:{{chore.directions}}</li>
   <li>Day of Week:{{chore.day_of_week}}</li>
-  <li><button class="clear-list">Make List Disappear Temporarily</button></li>
 </ol>
 
 {{/each}}
