--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,2 +1,11 @@
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
+
+
+ .well {
+     background-color:  #9999cc !important;
+     color: fff !important;
+     a: fff !important;
+
+
+ }
