--- a/assets/scripts/templates/chore-list.handlebars
+++ b/assets/scripts/templates/chore-list.handlebars
@@ -2,6 +2,7 @@
 {{#each chores as |chore|}}
 
 <div class="container">
+  <!-- change back to row below -->
 <div class="row">
   <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
     <div class="thumbnail">
