Hides all but sign up and sign out boxes on page load
Beginning of hide/show features.
This hides the following on page load, using a CSS
class I defined called 'hidden' (in index.scss)

.hidden is applied to:

chore-update
chore-create
chore-delete
chore-show
sign-out

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -6,6 +6,8 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
      background-color:  #9999cc !important;
      color: fff !important;
      a: fff !important;
+ }
 
-
+ .hidden {
+   display: none;
  }
